# envtmpl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  template.rs
