[package]
name = "envtmpl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.15", features = ["derive"] }
glob = "0.3.1"
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
path-dedot = "3.1.1"
semver = "1.0.21"
snailquote = "0.3.1"
url = "2.5.0"
